feat: [PIDM-1668] Update unit test helpdesk